...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/low"
            app:select="@{viewmodel.roundResult == RoundResult.HIGH}" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/tryingNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:hint="1~100 사이의 숫자를 입력하세요"
            android:inputType="numberDecimal"
...
